Added the new data to the appendix

--- a/sections/b.main/4.implementation.tex
+++ b/sections/b.main/4.implementation.tex
@@ -1,5 +1,5 @@
 
-The refinement operators and axiom weakening have previously been implemented for \ALC in \cite{troquard2018repairing}. Based on this, we have extended the implementation to cover the full range of \SROIQ axioms and concepts.\footnote{The source code is available at \url{https://github.com/rolandbernard/ontologyutils}.} The concept refinement and axiom weakening operators for \SROIQ have been implemented as discussed above. Further, repair algorithms using the axiom weakening operator based also on the procedures already proposed in \cite{troquard2018repairing} and \cite{confalonieri2020towards} have been implemented. The implementation performs weakening in OWL 2 DL \cite{motik2012ontology} and is implemented in Java using the OWL API \cite{horridge2011owl,owlapi,matentzoglu2016introduction}. A plug-in for the ontology development tool Protégé has also been implemented, and will be discussed in more detail.\footnote{The Protégé plugin is available at \url{https://github.com/rolandbernard/protege-weakening}.} The plug-in allows for manually weakening axioms and executing the automatic repair algorithm.
+The refinement operators and axiom weakening operator have previously been implemented for \ALC in \cite{troquard2018repairing}. Based on this, we have extended the implementation to cover the full range of \SROIQ axioms and concepts.\footnote{The source code is available at \url{https://github.com/rolandbernard/ontologyutils}.} The concept refinement and axiom weakening operators for \SROIQ have been implemented as discussed above. Further, repair algorithms using the axiom weakening operator based also on the procedures already proposed in \cite{troquard2018repairing} and \cite{confalonieri2020towards} have been implemented. The implementation performs weakening in OWL 2 DL \cite{motik2012ontology} and is implemented in Java using the OWL API \cite{horridge2011owl,owlapi,matentzoglu2016introduction}. A plug-in for the ontology development tool Protégé has also been implemented, and will be discussed in more detail.\footnote{The Protégé plugin is available at \url{https://github.com/rolandbernard/protege-weakening}.} The plug-in allows for manually weakening axioms and executing the automatic repair algorithm.
 
 \section{Implementing \texorpdfstring{$\SROIQ$}{SROIQ} Weakening}\label{prototype}
 
