--- a/sections/b.main/4.implementation/1.prototype.tex
+++ b/sections/b.main/4.implementation/1.prototype.tex
@@ -1,5 +1,5 @@
 
-The implementation of the presented axiom weakening operator is based on the implementation at \cite{ontologyutils} for weakening in \ALC as discussed in \cite{troquard2018repairing}. The implementation has been significantly extended using the operators and algorithms presented in this thesis. We will now give a brief summary of the implemented repair algorithm.
+The implementation of the presented axiom weakening operator is based on the implementation at \cite{ontologyutils} for weakening in \ALC as discussed in \cite{troquard2018repairing}. The implementation has been significantly extended using the operators and algorithms presented in this thesis. We will now give a brief summary covering some implementation details.
 
 \begin{algorithm}[ht]
   \begin{algorithmic}
